Fixed text spacing on abbreviated nav menu

--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ a {
     .abb-nav-text {
         display: inline-block;
         position: relative;
+        margin: 0 5vw 0 5vw;
     }
 
     .abb-nav-text:after {
